overflow issue

--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -37,7 +37,6 @@ html { font-size: 62.5%; }
 body {
   font-size: 1.6rem;
   line-height: 2.56rem;
-  overflow: scroll !important;
   text-rendering: optimizeLegibility;
 }
 
